--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cmdk": "1.0.4",
     "crypto": "latest",
     "date-fns": "latest",
+    "dotenv": "^17.0.1",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucia": "latest",
