--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.454.0",
     "next": "^15.4.0-canary.91",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.4",
     "oslo": "latest",
     "pg": "^8.16.2",
     "react": "^18",
@@ -71,6 +72,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.32",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
